# RustPNML

./: .gitignore  Cargo.toml  README.md
pnml/: Example_philosophers.xml
src/: lib.rs  pnml.rs  pt_net_package.rs  pxml.rs  tests.rs  trait_impls.rs
