[package]
name = "pnml"
version = "0.1.0"
authors = ["\"tom\" <\"tom.meyer89@gmail.com\">"]
edition = "2018"

keywords = ["petri", "net", "xml", "pnml"]
categories = ["data-structures", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"

[features]
high-lvl-nets = []